# alexsavio.github.io

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CNAME  Makefile  Pipfile  README.md  archives.html  authors.html  biblatex_lyx_jabref_encoding.html  biblatex_lyx_jabref_encoding.txt  categories.html  data-analysis-tools-install.html  data-analysis-tools-install.txt  dependency-cooldown-considered-harmful.html  develop_server.sh  direnv-dotenv-envrc.html  fabfile.py  first-principles-data-engineering.html  first-principles-data-engineering.txt  first-principles-devops.html  first-principles-devops.txt  first-principles-distributed-systems.html  first-principles-distributed-systems.txt  first-principles-llm-agents.html  first-principles-software-design.html  first-principles-software-design.txt  first-principles-software-observability.html  first-principles-software-observability.txt  git-cleanup-bfg.html  git-collaboration-guidelines.html  git-collaboration-guidelines.txt  gspread_oauth2client_intro.html  gspread_oauth2client_intro.txt  how-to-byobu.html  how-to-byobu.txt  index.html  index2.html  (+24 more)
.config/: wt.toml
.github/: CODEOWNERS
author/: alexandre-m-savio.html  alexandre-m-savio2.html  alexandre-manhaes-savio.html  alexandre-savio.html
biblatex_lyx_jabref_encoding.txt/: biblatex_lyx_jabref.md
category/: development.html  engineering.html  git.html  latex.html  python.html  software-development.html  sysadmin.html  tools.html  ubuntu.html
content/: .editorconfig  2014-02-08_install_mayavi2_in_ubuntu_saucy.md  2014-02-08_virtualenv_.md  2014-02-27_biblatex_lyx_jabref.md  2014-06-03_setup_gcc_versions_ubuntu.md  2014-07-06_how_to_use_byobu.md  2017-12-30_git_cleanup_with_bfg.md  2020-06-11_git_collaboration_guidelines.md  2026-03-05_stress_testing_deliberative_alignment_anti_scheming.md  2026-03-30_first_principles_devops.md  2026-04-13_dependency-cooldown-considered-harmful.md  2026-05-08_first_principles_llm_agents.md  2026-06-09_torvalds-ai-is-a-tool-not-a-replacement.md  biblatex_lyx_jabref.md  bokeh_install.md  building_a_trading_bot_in_16_days_with_ai.md  data_analysis_modules_.md  data_analysis_modules_.md~  dependency-cooldown-considered-harmful.md  direnv_dotenv_envrc.md  first_principles_data_engineering.md  first_principles_devops.md  first_principles_software_design.md  first_principles_software_observability.md  git_cleanup_with_bfg copy.md  git_cleanup_with_bfg.md  git_collaboration_guidelines.md  gspread_oauth2client.md  how_to_use_byobu.md  install_mayavi2_in_ubuntu_saucy.md  neuroimage_pipelining.md  numpy_scipy_intelmkl_.md  rest_api_patterns_with_hug.md  setup_gcc_versions_ubuntu.md  update_github_fork.md  virtualenv_.md
data-analysis-tools-install.txt/: data_analysis_modules_.md
drafts/: building-a-trading-bot-in-12-days-with-ai.html  building-a-trading-bot-in-16-days-with-ai.html  data-analysis-tools-install.html  first-principles-data-engineering.html  first-principles-devops.html  keep_github_fork_updated.html  rest_api_patterns_with_hug.html  stress-testing-deliberative-alignment-anti-scheming.html  test_python_neuroimaging_pipelining.html
feeds/: alexandre-m-savio.atom.xml  alexandre-m-savio.rss.xml  alexandre-manhaes-savio.atom.xml  alexandre-manhaes-savio.rss.xml  all-en_us.atom.xml  all.atom.xml  all.rss.xml  development.atom.xml  development.rss.xml  engineering.atom.xml  engineering.rss.xml  git.atom.xml  git.rss.xml  latex.atom.xml  latex.rss.xml  python.atom.xml  python.rss.xml  software-development.atom.xml  software-development.rss.xml  sysadmin.atom.xml  sysadmin.rss.xml  tools.atom.xml  tools.rss.xml  ubuntu.atom.xml  ubuntu.rss.xml
numpy_scipy_mkl.txt/: numpy_scipy_intelmkl_.md
pages/: about.html  about.txt  work-with-me.html
scripts/: plot_dependency_events_quadrant.py  setup-ci.sh  simulate_dependency_cooldown.py
tag/: agents.html  ai.html  alignment.html  api.html  architecture.html  (+98 more)
(+19 files in other folders)
